tests/negative/neg_pr114_legacy_procedure.safe
-- Test: neg_pr114_legacy_procedure
-- Description: PR11.4 removes legacy procedure declarations from the admitted source surface.
-- Expected: REJECT source_frontend_error

package neg_pr114_legacy_procedure

   procedure touch (value : in out integer) is

      value = value + 1

